k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: security-patrol
  labels:
    app: sqlserver
spec:
  type: ClusterIP
  selector:
    app: sqlserver
  ports:
    - name: mssql
      port: 1433
      targetPort: 1433
      protocol: TCP
